// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MipCard matches snapshot for free tier locked state 1`] = `
<View
  testID="mip-card"
>
  <View
    style={
      [
        {
          "borderRadius": 16,
          "elevation": 3,
          "shadowOffset": {
            "height": 3,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 10,
        },
        {
          "backgroundColor": "#FFFFFF",
          "padding": 16,
          "shadowColor": "#000",
        },
        {
          "marginBottom": 12,
          "marginHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginBottom": 8,
        }
      }
    >
      <Ionicons
        color="#2E7D32"
        name="leaf"
        size={18}
      />
      <Text
        style={
          [
            {
              "color": "#2E7D32",
              "flex": 1,
              "fontSize": 17,
              "fontWeight": "700",
            },
            false,
          ]
        }
      >
        mip.title
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#2E7D3214",
            "borderRadius": 999,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          }
        }
      >
        <Ionicons
          color="#2E7D32"
          name="shield-checkmark"
          size={10}
        />
        <Text
          style={
            {
              "color": "#2E7D32",
              "fontSize": 9,
              "fontWeight": "700",
              "letterSpacing": 0.4,
            }
          }
        >
          EMBRAPA / MAPA
        </Text>
      </View>
    </View>
    <Text
      style={
        {
          "color": "#0F1A14",
          "fontSize": 20,
          "fontWeight": "700",
        }
      }
    >
      Ferrugem asiática da soja
    </Text>
    <Text
      style={
        {
          "color": "#435044",
          "fontSize": 12,
          "fontStyle": "italic",
          "marginBottom": 12,
        }
      }
    >
      Phakopsora pachyrhizi
    </Text>
    <Text
      style={
        {
          "color": "#435044",
          "fontSize": 12,
          "fontWeight": "600",
          "letterSpacing": 0.4,
          "marginBottom": 8,
          "textTransform": "uppercase",
        }
      }
    >
      mip.levelPickerLabel
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 8,
          "marginBottom": 12,
        }
      }
    >
      <View
        accessibilityLabel="mip.chipA11yUnlocked"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": true,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 1.5,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 14,
              "paddingVertical": 8,
            },
            {
              "backgroundColor": "#2E7D32",
              "borderColor": "#2E7D32FF",
              "opacity": 1,
            },
          ]
        }
        testID="mip-chip-baixo"
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "700",
                "letterSpacing": 0.3,
              },
              {
                "color": "#FFF",
              },
            ]
          }
        >
          mip.level.baixo
        </Text>
      </View>
      <View
        accessibilityLabel="mip.chipA11yLocked"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 1.5,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 14,
              "paddingVertical": 8,
            },
            {
              "backgroundColor": "#C89B3C14",
              "borderColor": "#C89B3C33",
              "opacity": 0.75,
            },
          ]
        }
        testID="mip-chip-medio"
      >
        <Ionicons
          color="#C89B3C"
          name="lock-closed"
          size={11}
        />
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "700",
                "letterSpacing": 0.3,
              },
              {
                "color": "#C89B3C",
              },
            ]
          }
        >
          mip.level.medio
        </Text>
      </View>
      <View
        accessibilityLabel="mip.chipA11yLocked"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 1.5,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 14,
              "paddingVertical": 8,
            },
            {
              "backgroundColor": "#B3462E14",
              "borderColor": "#B3462E33",
              "opacity": 0.75,
            },
          ]
        }
        testID="mip-chip-alto"
      >
        <Ionicons
          color="#B3462E"
          name="lock-closed"
          size={11}
        />
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "700",
                "letterSpacing": 0.3,
              },
              {
                "color": "#B3462E",
              },
            ]
          }
        >
          mip.level.alto
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderLeftWidth": 3,
            "marginBottom": 12,
            "paddingLeft": 12,
            "paddingVertical": 8,
          },
          {
            "borderLeftColor": "#2E7D32",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#435044",
            "fontSize": 12,
            "fontWeight": "700",
            "letterSpacing": 0.4,
            "marginBottom": 4,
            "textTransform": "uppercase",
          }
        }
      >
        mip.criterionLabel
      </Text>
      <Text
        style={
          [
            {
              "color": "#0F1A14",
              "fontSize": 15,
              "lineHeight": 21,
            },
            false,
          ]
        }
      >
        Primeiras pústulas
      </Text>
      <Text
        style={
          [
            {
              "color": "#435044",
              "fontSize": 12,
              "fontWeight": "700",
              "letterSpacing": 0.4,
              "marginBottom": 4,
              "textTransform": "uppercase",
            },
            {
              "marginTop": 12,
            },
          ]
        }
      >
        mip.recommendedActionLabel
      </Text>
      <Text
        style={
          [
            {
              "color": "#0F1A14",
              "fontSize": 15,
              "lineHeight": 21,
            },
            false,
          ]
        }
      >
        Ação baixo
      </Text>
      <View
        style={
          {
            "marginTop": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 6,
              "marginBottom": 6,
            }
          }
        >
          <Ionicons
            color="#2E7D32"
            name="hand-left"
            size={14}
          />
          <Text
            style={
              {
                "color": "#0F1A14",
                "fontSize": 13,
                "fontWeight": "700",
              }
            }
          >
            mip.culturalActions
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "gap": 10,
              "marginBottom": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 3,
                  "height": 5,
                  "marginTop": 8,
                  "width": 5,
                },
                {
                  "backgroundColor": "#2E7D32",
                },
              ]
            }
          />
          <Text
            style={
              [
                {
                  "color": "#0F1A14",
                  "fontSize": 15,
                  "lineHeight": 21,
                },
                false,
              ]
            }
          >
            Rotação de culturas
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "gap": 10,
              "marginBottom": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 3,
                  "height": 5,
                  "marginTop": 8,
                  "width": 5,
                },
                {
                  "backgroundColor": "#2E7D32",
                },
              ]
            }
          />
          <Text
            style={
              [
                {
                  "color": "#0F1A14",
                  "fontSize": 15,
                  "lineHeight": 21,
                },
                false,
              ]
            }
          >
            Vazio sanitário
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginTop": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 6,
              "marginBottom": 6,
            }
          }
        >
          <Ionicons
            color="#4CAF50"
            name="bug"
            size={14}
          />
          <Text
            style={
              {
                "color": "#0F1A14",
                "fontSize": 13,
                "fontWeight": "700",
              }
            }
          >
            mip.biologicalActions
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "gap": 10,
              "marginBottom": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 3,
                  "height": 5,
                  "marginTop": 8,
                  "width": 5,
                },
                {
                  "backgroundColor": "#4CAF50",
                },
              ]
            }
          />
          <Text
            style={
              [
                {
                  "color": "#0F1A14",
                  "fontSize": 15,
                  "lineHeight": 21,
                },
                false,
              ]
            }
          >
            Bacillus subtilis
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginTop": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 6,
              "marginBottom": 6,
            }
          }
        >
          <Ionicons
            color="#435044"
            name="construct"
            size={14}
          />
          <Text
            style={
              {
                "color": "#0F1A14",
                "fontSize": 13,
                "fontWeight": "700",
              }
            }
          >
            mip.mechanicalActions
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "gap": 10,
              "marginBottom": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 3,
                  "height": 5,
                  "marginTop": 8,
                  "width": 5,
                },
                {
                  "backgroundColor": "#435044",
                },
              ]
            }
          />
          <Text
            style={
              [
                {
                  "color": "#0F1A14",
                  "fontSize": 15,
                  "lineHeight": 21,
                },
                false,
              ]
            }
          >
            Monitoramento semanal
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginTop": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#0F1A14",
              "fontSize": 13,
              "fontWeight": "700",
            }
          }
        >
          mip.monitoringLabel
        </Text>
        <Text
          style={
            [
              {
                "color": "#0F1A14",
                "fontSize": 15,
                "lineHeight": 21,
              },
              false,
            ]
          }
        >
          <Text
            style={
              {
                "color": "#435044",
                "fontWeight": "700",
              }
            }
          >
            mip.monitoringMethod
            : 
          </Text>
          Inspeção visual
        </Text>
        <Text
          style={
            [
              {
                "color": "#0F1A14",
                "fontSize": 15,
                "lineHeight": 21,
              },
              false,
            ]
          }
        >
          <Text
            style={
              {
                "color": "#435044",
                "fontWeight": "700",
              }
            }
          >
            mip.monitoringFrequency
            : 
          </Text>
          Semanal
        </Text>
        <Text
          style={
            [
              {
                "color": "#0F1A14",
                "fontSize": 15,
                "lineHeight": 21,
              },
              false,
            ]
          }
        >
          <Text
            style={
              {
                "color": "#435044",
                "fontWeight": "700",
              }
            }
          >
            mip.monitoringControlLevel
            : 
          </Text>
          Primeira pústula
        </Text>
      </View>
      <View
        style={
          {
            "marginTop": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#0F1A14",
              "fontSize": 13,
              "fontWeight": "700",
            }
          }
        >
          mip.resistanceRotation
        </Text>
        <Text
          style={
            [
              {
                "color": "#0F1A14",
                "fontSize": 15,
                "lineHeight": 21,
              },
              false,
            ]
          }
        >
          Alternar FRAC 3 / 7 / 11
        </Text>
      </View>
    </View>
    <View
      accessibilityLabel="mip.upgradeCtaA11y"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#2E7D32",
          "borderRadius": 12,
          "flexDirection": "row",
          "gap": 8,
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 12,
          "paddingVertical": 12,
        }
      }
      testID="mip-upgrade-cta"
    >
      <Ionicons
        color="#FFF"
        name="lock-open"
        size={16}
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFF",
              "fontSize": 13,
              "fontWeight": "700",
            }
          }
        >
          mip.upgradeCtaTitle
        </Text>
        <Text
          style={
            {
              "color": "#FFF",
              "fontSize": 11,
              "marginTop": 1,
              "opacity": 0.85,
            }
          }
        >
          mip.upgradeCtaSubtitle
        </Text>
      </View>
      <Ionicons
        color="#FFF"
        name="chevron-forward"
        size={18}
      />
    </View>
    <View
      style={
        {
          "marginBottom": 12,
          "marginTop": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#0F1A14",
            "fontSize": 13,
            "fontWeight": "700",
          }
        }
      >
        mip.referencesLabel
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 6,
            "marginTop": 6,
          }
        }
      >
        <View
          accessibilityLabel="mip.referenceA11y"
          accessibilityRole="link"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#43504414",
                "borderRadius": 6,
                "flexDirection": "row",
                "gap": 4,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "opacity": 1,
              },
            ]
          }
        >
          <Text
            style={
              {
                "color": "#435044",
                "fontSize": 11,
                "fontWeight": "700",
              }
            }
          >
            EMBRAPA
          </Text>
          <Text
            style={
              {
                "color": "#435044",
                "fontSize": 10,
              }
            }
          >
            2024
          </Text>
          <Ionicons
            color="#435044"
            name="open-outline"
            size={11}
          />
        </View>
        <View
          accessibilityLabel="mip.referenceA11y"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#43504414",
                "borderRadius": 6,
                "flexDirection": "row",
                "gap": 4,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "opacity": 0.8,
              },
            ]
          }
        >
          <Text
            style={
              {
                "color": "#435044",
                "fontSize": 11,
                "fontWeight": "700",
              }
            }
          >
            MAPA
          </Text>
          <Text
            style={
              {
                "color": "#435044",
                "fontSize": 10,
              }
            }
          >
            2024
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityRole="text"
      accessible={true}
      style={
        {
          "alignItems": "flex-start",
          "backgroundColor": "#C89B3C0F",
          "borderRadius": 8,
          "flexDirection": "row",
          "gap": 6,
          "padding": 10,
        }
      }
    >
      <Ionicons
        color="#C89B3C"
        name="shield-checkmark"
        size={14}
      />
      <Text
        style={
          {
            "color": "#435044",
            "flex": 1,
            "fontSize": 11,
            "fontStyle": "italic",
            "lineHeight": 16,
          }
        }
      >
        Disclaimer CREA fixo de teste — não substitui receituário.
      </Text>
    </View>
  </View>
</View>
`;

exports[`MipCard matches snapshot for pro tier unlocked state 1`] = `
<View
  testID="mip-card"
>
  <View
    style={
      [
        {
          "borderRadius": 16,
          "elevation": 3,
          "shadowOffset": {
            "height": 3,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 10,
        },
        {
          "backgroundColor": "#FFFFFF",
          "padding": 16,
          "shadowColor": "#000",
        },
        {
          "marginBottom": 12,
          "marginHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginBottom": 8,
        }
      }
    >
      <Ionicons
        color="#2E7D32"
        name="leaf"
        size={18}
      />
      <Text
        style={
          [
            {
              "color": "#2E7D32",
              "flex": 1,
              "fontSize": 17,
              "fontWeight": "700",
            },
            false,
          ]
        }
      >
        mip.title
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#2E7D3214",
            "borderRadius": 999,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          }
        }
      >
        <Ionicons
          color="#2E7D32"
          name="shield-checkmark"
          size={10}
        />
        <Text
          style={
            {
              "color": "#2E7D32",
              "fontSize": 9,
              "fontWeight": "700",
              "letterSpacing": 0.4,
            }
          }
        >
          EMBRAPA / MAPA
        </Text>
      </View>
    </View>
    <Text
      style={
        {
          "color": "#0F1A14",
          "fontSize": 20,
          "fontWeight": "700",
        }
      }
    >
      Ferrugem asiática da soja
    </Text>
    <Text
      style={
        {
          "color": "#435044",
          "fontSize": 12,
          "fontStyle": "italic",
          "marginBottom": 12,
        }
      }
    >
      Phakopsora pachyrhizi
    </Text>
    <Text
      style={
        {
          "color": "#435044",
          "fontSize": 12,
          "fontWeight": "600",
          "letterSpacing": 0.4,
          "marginBottom": 8,
          "textTransform": "uppercase",
        }
      }
    >
      mip.levelPickerLabel
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 8,
          "marginBottom": 12,
        }
      }
    >
      <View
        accessibilityLabel="mip.chipA11yUnlocked"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": true,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 1.5,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 14,
              "paddingVertical": 8,
            },
            {
              "backgroundColor": "#2E7D32",
              "borderColor": "#2E7D32FF",
              "opacity": 1,
            },
          ]
        }
        testID="mip-chip-baixo"
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "700",
                "letterSpacing": 0.3,
              },
              {
                "color": "#FFF",
              },
            ]
          }
        >
          mip.level.baixo
        </Text>
      </View>
      <View
        accessibilityLabel="mip.chipA11yUnlocked"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 1.5,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 14,
              "paddingVertical": 8,
            },
            {
              "backgroundColor": "#C89B3C14",
              "borderColor": "#C89B3C33",
              "opacity": 1,
            },
          ]
        }
        testID="mip-chip-medio"
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "700",
                "letterSpacing": 0.3,
              },
              {
                "color": "#C89B3C",
              },
            ]
          }
        >
          mip.level.medio
        </Text>
      </View>
      <View
        accessibilityLabel="mip.chipA11yUnlocked"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 1.5,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 14,
              "paddingVertical": 8,
            },
            {
              "backgroundColor": "#B3462E14",
              "borderColor": "#B3462E33",
              "opacity": 1,
            },
          ]
        }
        testID="mip-chip-alto"
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "700",
                "letterSpacing": 0.3,
              },
              {
                "color": "#B3462E",
              },
            ]
          }
        >
          mip.level.alto
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderLeftWidth": 3,
            "marginBottom": 12,
            "paddingLeft": 12,
            "paddingVertical": 8,
          },
          {
            "borderLeftColor": "#2E7D32",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#435044",
            "fontSize": 12,
            "fontWeight": "700",
            "letterSpacing": 0.4,
            "marginBottom": 4,
            "textTransform": "uppercase",
          }
        }
      >
        mip.criterionLabel
      </Text>
      <Text
        style={
          [
            {
              "color": "#0F1A14",
              "fontSize": 15,
              "lineHeight": 21,
            },
            false,
          ]
        }
      >
        Primeiras pústulas
      </Text>
      <Text
        style={
          [
            {
              "color": "#435044",
              "fontSize": 12,
              "fontWeight": "700",
              "letterSpacing": 0.4,
              "marginBottom": 4,
              "textTransform": "uppercase",
            },
            {
              "marginTop": 12,
            },
          ]
        }
      >
        mip.recommendedActionLabel
      </Text>
      <Text
        style={
          [
            {
              "color": "#0F1A14",
              "fontSize": 15,
              "lineHeight": 21,
            },
            false,
          ]
        }
      >
        Ação baixo
      </Text>
      <View
        style={
          {
            "marginTop": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 6,
              "marginBottom": 6,
            }
          }
        >
          <Ionicons
            color="#2E7D32"
            name="hand-left"
            size={14}
          />
          <Text
            style={
              {
                "color": "#0F1A14",
                "fontSize": 13,
                "fontWeight": "700",
              }
            }
          >
            mip.culturalActions
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "gap": 10,
              "marginBottom": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 3,
                  "height": 5,
                  "marginTop": 8,
                  "width": 5,
                },
                {
                  "backgroundColor": "#2E7D32",
                },
              ]
            }
          />
          <Text
            style={
              [
                {
                  "color": "#0F1A14",
                  "fontSize": 15,
                  "lineHeight": 21,
                },
                false,
              ]
            }
          >
            Rotação de culturas
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "gap": 10,
              "marginBottom": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 3,
                  "height": 5,
                  "marginTop": 8,
                  "width": 5,
                },
                {
                  "backgroundColor": "#2E7D32",
                },
              ]
            }
          />
          <Text
            style={
              [
                {
                  "color": "#0F1A14",
                  "fontSize": 15,
                  "lineHeight": 21,
                },
                false,
              ]
            }
          >
            Vazio sanitário
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginTop": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 6,
              "marginBottom": 6,
            }
          }
        >
          <Ionicons
            color="#4CAF50"
            name="bug"
            size={14}
          />
          <Text
            style={
              {
                "color": "#0F1A14",
                "fontSize": 13,
                "fontWeight": "700",
              }
            }
          >
            mip.biologicalActions
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "gap": 10,
              "marginBottom": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 3,
                  "height": 5,
                  "marginTop": 8,
                  "width": 5,
                },
                {
                  "backgroundColor": "#4CAF50",
                },
              ]
            }
          />
          <Text
            style={
              [
                {
                  "color": "#0F1A14",
                  "fontSize": 15,
                  "lineHeight": 21,
                },
                false,
              ]
            }
          >
            Bacillus subtilis
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginTop": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 6,
              "marginBottom": 6,
            }
          }
        >
          <Ionicons
            color="#435044"
            name="construct"
            size={14}
          />
          <Text
            style={
              {
                "color": "#0F1A14",
                "fontSize": 13,
                "fontWeight": "700",
              }
            }
          >
            mip.mechanicalActions
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "gap": 10,
              "marginBottom": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 3,
                  "height": 5,
                  "marginTop": 8,
                  "width": 5,
                },
                {
                  "backgroundColor": "#435044",
                },
              ]
            }
          />
          <Text
            style={
              [
                {
                  "color": "#0F1A14",
                  "fontSize": 15,
                  "lineHeight": 21,
                },
                false,
              ]
            }
          >
            Monitoramento semanal
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginTop": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#0F1A14",
              "fontSize": 13,
              "fontWeight": "700",
            }
          }
        >
          mip.monitoringLabel
        </Text>
        <Text
          style={
            [
              {
                "color": "#0F1A14",
                "fontSize": 15,
                "lineHeight": 21,
              },
              false,
            ]
          }
        >
          <Text
            style={
              {
                "color": "#435044",
                "fontWeight": "700",
              }
            }
          >
            mip.monitoringMethod
            : 
          </Text>
          Inspeção visual
        </Text>
        <Text
          style={
            [
              {
                "color": "#0F1A14",
                "fontSize": 15,
                "lineHeight": 21,
              },
              false,
            ]
          }
        >
          <Text
            style={
              {
                "color": "#435044",
                "fontWeight": "700",
              }
            }
          >
            mip.monitoringFrequency
            : 
          </Text>
          Semanal
        </Text>
        <Text
          style={
            [
              {
                "color": "#0F1A14",
                "fontSize": 15,
                "lineHeight": 21,
              },
              false,
            ]
          }
        >
          <Text
            style={
              {
                "color": "#435044",
                "fontWeight": "700",
              }
            }
          >
            mip.monitoringControlLevel
            : 
          </Text>
          Primeira pústula
        </Text>
      </View>
      <View
        style={
          {
            "marginTop": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#0F1A14",
              "fontSize": 13,
              "fontWeight": "700",
            }
          }
        >
          mip.resistanceRotation
        </Text>
        <Text
          style={
            [
              {
                "color": "#0F1A14",
                "fontSize": 15,
                "lineHeight": 21,
              },
              false,
            ]
          }
        >
          Alternar FRAC 3 / 7 / 11
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "marginBottom": 12,
          "marginTop": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#0F1A14",
            "fontSize": 13,
            "fontWeight": "700",
          }
        }
      >
        mip.referencesLabel
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 6,
            "marginTop": 6,
          }
        }
      >
        <View
          accessibilityLabel="mip.referenceA11y"
          accessibilityRole="link"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#43504414",
                "borderRadius": 6,
                "flexDirection": "row",
                "gap": 4,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "opacity": 1,
              },
            ]
          }
        >
          <Text
            style={
              {
                "color": "#435044",
                "fontSize": 11,
                "fontWeight": "700",
              }
            }
          >
            EMBRAPA
          </Text>
          <Text
            style={
              {
                "color": "#435044",
                "fontSize": 10,
              }
            }
          >
            2024
          </Text>
          <Ionicons
            color="#435044"
            name="open-outline"
            size={11}
          />
        </View>
        <View
          accessibilityLabel="mip.referenceA11y"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#43504414",
                "borderRadius": 6,
                "flexDirection": "row",
                "gap": 4,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "opacity": 0.8,
              },
            ]
          }
        >
          <Text
            style={
              {
                "color": "#435044",
                "fontSize": 11,
                "fontWeight": "700",
              }
            }
          >
            MAPA
          </Text>
          <Text
            style={
              {
                "color": "#435044",
                "fontSize": 10,
              }
            }
          >
            2024
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityRole="text"
      accessible={true}
      style={
        {
          "alignItems": "flex-start",
          "backgroundColor": "#C89B3C0F",
          "borderRadius": 8,
          "flexDirection": "row",
          "gap": 6,
          "padding": 10,
        }
      }
    >
      <Ionicons
        color="#C89B3C"
        name="shield-checkmark"
        size={14}
      />
      <Text
        style={
          {
            "color": "#435044",
            "flex": 1,
            "fontSize": 11,
            "fontStyle": "italic",
            "lineHeight": 16,
          }
        }
      >
        Disclaimer CREA fixo de teste — não substitui receituário.
      </Text>
    </View>
  </View>
</View>
`;
